Add get products list endpoint for admin dashboard
