# openapi/custom-shop-api.yaml
@@ -227,6 +227,47 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
         "500":
           $ref: "#/components/responses/InternalServerError"
+    get:
+      summary: Get paginated list of products for the admin dashboard
+      description: Retrieves a paginated list of products with essential details for the admin dashboard.
+      tags:
+        - Admin - Product
+      operationId: getAdminProductList
+      parameters:
+        - name: page
+          in: query
+          required: false
+          description: Page number (default is 1)
+          schema:
+            type: integer
+            default: 1
+        - name: size
+          in: query
+          required: false
+          description: Number of items per page (default is 10)
+          schema:
+            type: integer
+            default: 10
+      responses:
+        "200":
+          description: Successfully retrieved product list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AdminProductListResponse"
+        "400":
+          description: Invalid request parameters
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
   /v1/admin/products/{productId}:
     get:
       summary: Get product details
@@ -870,6 +911,54 @@ components:
         name:
           type: string
           description: The name of the attribute option.
+
+    AdminProductListResponse:
+      type: object
+      properties:
+        products:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProductListItemResponse"
+        currentPage:
+          type: integer
+          description: Current page number
+        pageSize:
+          type: integer
+          description: Number of products per page
+        totalItems:
+          type: integer
+          description: Total number of products
+        totalPages:
+          type: integer
+          description: Total number of pages
+        lastPage:
+          type: boolean
+          description: Indicates if this is the last page
+
+    ProductListItemResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          description: Unique identifier of the product
+        name:
+          type: string
+          description: Name of the product
+        description:
+          type: string
+          description: Product description
+        sku:
+          type: string
+          description: Stock Keeping Unit (SKU) identifier
+        productTypeName:
+          type: string
+          description: Name of the associated product type
+        price:
+          type: number
+          format: float
+          description: Product price
+
 
     ErrorResponse:
       type: object
